# hello_project

./: pyproject.toml
hello/scripts/: say_hello.py
